@@ -17,6 +17,14 @@ use Specio::Library::Builtins;
         declared_at        => Specio::DeclaredAt->new_from_caller(0),
     );
 
+    my $ref = Specio::Constraint::Simple->new(
+        name               => 'Bar',
+        parent             => t('Ref'),
+        inline_generator   => sub {'1'},
+        inline_environment => { '$scalar_from' => 77 },
+        declared_at        => Specio::DeclaredAt->new_from_caller(0),
+    );
+
     my $from_int = Specio::Coercion->new(
         from               => t('Int'),
         to                 => $t,
@@ -37,15 +45,24 @@ use Specio::Library::Builtins;
         declared_at => Specio::DeclaredAt->new_from_caller(0),
     );
 
+    my $from_ref = Specio::Coercion->new(
+        from             => $ref,
+        to               => $t,
+        inline_generator => sub {'1'},
+        declared_at      => Specio::DeclaredAt->new_from_caller(0),
+    );
+
     $t->add_coercion($from_int);
     $t->add_coercion($from_num);
+    $t->add_coercion($from_ref);
 
     my ( $code, $env ) = $t->inline_coercion_and_check('$var');
 
     my %expect = (
-        '$scalar' => 42,
-        '%hash'   => { y => 84 },
-        '@array'  => [ 1, 2, 3 ],
+        '$scalar'      => 42,
+        '$scalar_from' => 77,
+        '%hash'        => { y => 84 },
+        '@array'       => [ 1, 2, 3 ],
     );
 
     for my $key ( sort keys %expect ) {
